--- a/Scripts/requirements.txt
+++ b/Scripts/requirements.txt
@@ -1,6 +1,9 @@
 streamlit
+openai
 pandas
 numpy
-pywin32==305;platform_system=="Windows"
+openpyxl
+plotly
+#pywin32==305;platform_system=="Windows"
 polars
 functools
